alignment issue fiexed for detail page, navigation bar for logout and login fixed

--- a/overallReports/static/css/base.css
+++ b/overallReports/static/css/base.css
@@ -12,13 +12,14 @@ body {
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Gothic+A1);
 
-p {
+/*p {
   margin: 15px;
-}
+}*/
 
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 li {
@@ -89,6 +90,9 @@ li {
   margin-right: 1em;
   color: white;
 }
+.social{
+  color: white;
+}
 
 .logo {
   color: white;
@@ -133,6 +137,9 @@ li {
   list-style: none;
   display: flex;
   align-items: center;
+}
+.nav-li{
+  margin-left: 10px;
 }
 
 .search {
